@@ -2,6 +2,7 @@
 
 	* Moved to namespaces, verified compatibility with TYPO3 CMS 7, resolves #67305
 	* Moved documentation to reST, resolves #67307
+	* Updated unit tests, resolves #67308
 
 2014-05-09 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
